@@ -217,6 +217,7 @@ GPG4WIN_IPKG([man_novice_en])
 GPG4WIN_BPKG_GNUWIN32([kdesupport])
 GPG4WIN_BPKG_GNUWIN32([qt], [kdesupport])
 GPG4WIN_BPKG_BINSRC([oxygen-icons])
+GPG4WIN_BPKG_GNUWIN32([kdelibs], [qt oxygen-icons])
 
 GPG4WIN_FINALIZE
 
