@@ -30,6 +30,15 @@
 !undef HAVE_PKG_MAN_NOVICE_DE
 !undef HAVE_PKG_MAN_NOVICE_EN
 !undef HAVE_PKG_MAN_ADVANCED_DE
+!ifdef HAVE_PKG_KDELIBS
+!undef HAVE_PKG_KDELIBS
+!endif
+!ifdef HAVE_PKG_KDESUPPORT
+!undef HAVE_PKG_KDESUPPORT
+!endif
+!ifdef HAVE_PKG_OXYGEN_ICONS
+!undef HAVE_PKG_OXYGEN_ICONS
+!endif
 !ifdef HAVE_PKG_QT
 !undef HAVE_PKG_QT
 !endif
